--- a/results.Rmd
+++ b/results.Rmd
@@ -1,12 +1,18 @@
-# Results
+# Additional Results
 
-With all of our work constructing the regression complete, we are now ready to interpret the results. The Baseline Model assumes that no factors affect sentencing except race, so race is our independent variable and total sentence length is the dependent variable. Because the independent variable race is categorical, we code one of the values of that variable (one race) with a value of zero and call that value the reference level. In this case, the race white was coded as the reference value and the races Black, Hispanic, and ARI are compared against it.
+We saw in our baseline model that, accounting for nothing other than race, Black defendants received on average sentences that were 18.5 months longer than white defendants. Similarly, Hispanic defendants receive sentences that are an average of 5.3 months longer than those of white defendants. Defendants classified as ARI receive sentences that are 9.0 months shorter than white defendants on average. Why might that be? We need to be careful in drawing conclusions from this initial model because we have not yet tried to explain those differences based on other factors, such as year or criminal history.
 
-We see that, accounting for nothing other than race, Black defendants received on average sentences that were 18.5 months longer than white defendants. Similarly, Hispanic defendants receive sentences that are 5.3 months longer than those of white defendants. Note that the confidence intervals for these estimates are also provided (see the previous case study for discussion of confidence intervals). Defendants classified as ARI receive sentences that are 9.0 months shorter than white defendants on average. Why might that be? We need to be careful in drawing conclusions from this initial model because we have not yet tried to explain those differences based on other factors, such as year or criminal history.
+As we add and consider factors that might explain some of this variation, we expect to see this differential in sentencing length change. In no particular order, the other explanatory variables discussed were added to the model. For example, when demographic information is included, the differential in sentencing length for Black defendants drops by $(18.5 - 12.9) = 5.6$ months. With demographic factors added as independent variables, Black defendants receive on average sentences that are 12.9 months longer than white defendants. In the end, with all explanatory variables included in the District I Model in the original study, the authors found that Black defendants receive sentences on average 1.9 months longer than white defendants and Hispanic defendants receive sentences that are not significanlty different from those of white defendants.
 
-As we add and consider factors that might explain some of this variation, we expect to see this differential in sentencing length change. In no particular order, the other explanatory variables are added to the model. For example, when demographic information is included, the differential in sentencing length for Black defendants drops by $(18.5-12.9) = 5.6$ months. With demographic factors added as independent variables, Black defendants receive on average sentences that are 12.9 years longer than white defendants. The researchers included other explanatory variables, including factors considered in the sentencing guidelines. In the end, with all explanatory variables included in the District I Model, we find that Black defendants receive sentences on average 1.9 months longer than white defendants and Hispanic defendants receive sentences at the same length as white defendants.
+Throughout our analyses, we focused on the multiple $R^2$ value, although the original study appropriately reports the *adjusted* $R^2$. The interpretation is similar, although the adjusted $R^2$ takes a hit relative to the multiple $R^2$ value if predictors are included in the model that do not explain much more of the variation in the outcome. We saw that for the baseline model, the adjusted $R^2$ was just shy of 0.02, meaning that only 2% of the variability in sentence length is explained by race alone. By including all the terms in a model that also includes all the districts (the District I model), the adjusted $R^2$ is reported as 0.79, meaning that 79% of the variability in sentence length is explained by this fuller model. 
 
-It is worth noting that the adjusted $R^2$ values are reported. This allows us to determine how much of the variation in sentencing is explained by the independent variables considered in the model. For the baseline model, the adjusted $R^2$ is 0.02, meaning that only 2% of the variability in sentence length is explained by the baseline model. For the full model, the adjusted $R^2$ is reported as 0.79, meaning that 79% of the variability in sentence length is explained by the full model. The adjusted $R^2$ is reported instead of $R^2$ because adjusted $R^2$ adjusts for the number of independent variables included in the model. As we add explanatory variables, $R^2$ will likely increase, but it might be a spurious increase. The adjusted $R^2$ takes the number of variables into account so is reported in multivariate regressions.
+The authors further refine the analysis by looking at individual districts rather than the federal court system nationwide in the District II Model, which we partially replicated in this case study. We saw from first column of [Figure 2](https://www.nature.com/articles/s41599-023-01879-5/figures/2) (copied below) that Black defendants receive longer sentences than white defendants in at least 11 districts and ARI defendants receive longer sentences than white defendants in at least 3 districts. 
 
-The authors further refine the analysis by looking at individual districts rather than the federal court system nationwide in the District II Model. We focus our examination on the results of this model. We see that Black defendants receive longer sentences than white defendants in 11 districts and ARI defendants receive longer sentences than white defendants in 3 districts. Figure 1 pulls out these districts and provides the 95% confidence interval for the sentence differential and Figure 2 highlights the locations of these districts in the U.S.
+![](photos/fedsent_fig2.jpg)
+
+The authors provide two additional visualizations summarizing their evidence of racial disparities in federal criminal sentencing, focusing in particular on differences in sentence lengths between White defendants and all other races. [Figure 3](https://www.nature.com/articles/s41599-023-01879-5/figures/3) below displays the 95% confidence intervals for the sentence differential, while the final [Figure 4](https://www.nature.com/articles/s41599-023-01879-5/figures/4) below highlights the geographic locations of these districts with sentencing differentials in the U.S. 
+
+![](photos/fedsent_fig3.jpg)
+
+![](photos/fedsent_fig4.jpg)
 
